# Webapp-Devis-Chassis-Aluminium-v2

./: .env.example  .gitignore  BUILD.md  DEPLOY_RAILWAY.md  INSTALLATION-VPS.md  QUICK-START-VPS.txt  README.md  build_css.py  create_demo_company.py  db.json  deploy-vps.sh  deploy-windows-server.ps1  install-auto-macos.sh  install-auto-windows.ps1  install-auto.sh  install-vps.sh  main.py  passenger_wsgi.py  populate_workflow_data.py  pyproject.toml  replit.md  requirements.txt  sample_pricing.csv  seed_db.py  wsgi.py
.git.old/: COMMIT_EDITMSG  ORIG_HEAD  config  index
.git.old/objects/pack/: pack-566593d7d630d1ac18987bc661b34315d5a01b1d.idx  pack-566593d7d630d1ac18987bc661b34315d5a01b1d.rev
.git.old/refs/heads/: main  replit-agent
.git.old/refs/remotes/origin/: main
.local/state/replit/agent/: .latest.json
.local/state/replit/agent/filesystem/: filesystem_state.json
app/: __init__.py  config.py  crypto_utils.py  i18n.py  models.py
app/locales/: en.json  es.json.example  fr.json
app/routes/: auth.py  catalog.py  email.py  languages.py  quotes.py  settings.py  super_admin.py  users.py
app/services/: backup.py  updater.py
app/static/: index.html  manifest.json  sw.js
app/static/css/: styles.css  tailwind-input.css  tailwind.css
app/static/js/: app.js  dashboard.js  i18n.js  profile.js  settings.js  super_admin.js
app/templates/: dashboard.html  login.html  profile.html  quote.html  settings.html  super_admin.html  super_admin_activity_logs.html  super_admin_app_settings.html  super_admin_profile.html
docs/: API.md
