[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "pillow>=11.3.0",
    "reportlab>=4.4.4",
    "werkzeug>=3.1.3",
    "flask-migrate>=4.1.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "cryptography>=46.0.2",
    "requests>=2.32.5",
]
